kubefiles/celestia-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.network/argus-default: "true"
    io.kompose.service: celestia
  name: celestia
spec:
  containers:
    - image: gcr.io/world-engine-test/celestia_node@sha256:ca3aebb37892f76baa8a1fe761f0ce1013a94c7de0a252d9e12a3f15f8839a4e
      name: celestia-container
      ports:
        - containerPort: 26657
        - containerPort: 26659
        - containerPort: 9090
      resources: {}
  restartPolicy: OnFailure
status: {}
