kubefiles/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: postgres
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: postgres
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/nakama-default: "true"
        io.kompose.service: postgres
    spec:
      containers:
        - args:
            - postgres
            - -c
            - shared_preload_libraries=pg_stat_statements
            - -c
            - pg_stat_statements.track=all
          image: postgres:12.2-alpine
          name: postgres
          ports:
            - containerPort: 5432
            - containerPort: 8080
          resources: {}
          volumeMounts:
            - mountPath: /postgresql/data/
              name: data
      restartPolicy: Always
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
status: {}
