kubefiles/celestia-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: celestia
  name: celestia
spec:
  ports:
    - name: "26657"
      port: 26657
      targetPort: 26657
    - name: "26659"
      port: 26659
      targetPort: 26659
    - name: "9090"
      port: 9090
      targetPort: 9090
  selector:
    io.kompose.service: celestia
status:
  loadBalancer: {}
