kubefiles/nakama-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: nakama
  name: nakama
spec:
  type: NodePort
  ports:
    - name: "7349"
      port: 7349
      targetPort: 7349
    - name: "7350"
      port: 7350
      targetPort: 7350
    - name: "7351"
      port: 7351
      targetPort: 7351
      nodePort: 31013
  selector:
    io.kompose.service: nakama
status:
  loadBalancer: {}
