kubefiles/rollup-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: rollup
  name: rollup
spec:
  ports:
    - name: "9090"
      port: 9090
      targetPort: 9090
    - name: "1317"
      port: 1317
      targetPort: 1317
    - name: "26657"
      port: 26657
      targetPort: 26657
    - name: "5050"
      port: 5050
      targetPort: 5050
  selector:
    io.kompose.service: rollup
status:
  loadBalancer: {}
